batchHandlerFramework/force-app/main/default/objects/BatchHandlerSetting__mdt/BatchHandlerSetting__mdt.object-meta.xml
<CustomObject>
    <label>Batch Handler Setting</label>
    <pluralLabel>Batch Handler Settings</pluralLabel>
</CustomObject>