batchHandlerFramework/force-app/main/default/objects/BatchHandlerSetting__mdt/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <inlineHelpText>A change in Interval will take effect in the next run</inlineHelpText>
    <label>Interval (in mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>