batchHandlerFramework/force-app/main/default/objects/BatchHandlerSetting__mdt/fields/LastRun__c.field-meta.xml
<CustomField>
    <fullName>LastRun__c</fullName>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>