batchHandlerFramework/force-app/main/default/objects/BatchHandlerSetting__mdt/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A change in the Scheduling will take effect in the next run</inlineHelpText>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>